Clean-up: get rid of unused classes in index.html.

--- a/index.html
+++ b/index.html
@@ -53,18 +53,16 @@ www.domain.com/favicon.ico
                 <a href="#">Gmail</a>
                 <a href="#">Images</a>
                 <button class="topnav-btn"><i class="material-icons">apps</i></button>
-                <button class="topnav-btn round-button"><img src="https://lh3.googleusercontent.com/ogw/ADGmqu9xu9h053iL8UiGskZLIa7dAqiL45Nt4tOO31RB=s32-c-mo"></button>
+                <button class="topnav-btn"><img src="https://lh3.googleusercontent.com/ogw/ADGmqu9xu9h053iL8UiGskZLIa7dAqiL45Nt4tOO31RB=s32-c-mo"></button>
             </ul>
         </nav>
         <header class="row">
             <img class="logo row" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
-            <form class="search-form row">
+            <form class="row">
                 <fieldset class="row">
                     <div class="searchbar row">
-                        <i class="material-icons">search</i><!-- 
-
+                        <i class="material-icons">search</i><!--
                         --><input class="search-input" type="search" name="search"><!-- 
-
                         --><i class="material-icons">mic</i>
                     </div>
                     <div class="search-button-group row">
